@@ -455,9 +455,9 @@ creations/deletions), or "all".</description>
 
 <property>
   <name>mapred.speculative.execution</name>
-  <value>true</value>
-  <description>If true, then multiple instances of some map and reduce tasks may
-  be executed in parallel.</description>
+  <value>false</value>
+  <description>If true, then multiple instances of some map and reduce tasks 
+               may be executed in parallel.</description>
 </property>
 
 <property>
