@@ -107,6 +107,9 @@ Release 0.9.2 - 2006-12-15
  1. HADOOP-639. Restructure InterTrackerProtocol to make task
     accounting more reliable.  (Arun C Murthy via cutting)
 
+ 2. HADOOP-827. Turn off speculative execution by default, since it's
+    currently broken.  (omalley via cutting)
+
 
 Release 0.9.1 - 2006-12-06
 
